--- a/Storyboards/MainApp.storyboard
+++ b/Storyboards/MainApp.storyboard
@@ -89,7 +89,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LHC-qw-cLp" userLabel="PreviewView" customClass="PreviewView" customModule="Token" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LHC-qw-cLp" userLabel="PreviewView">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DDS-KH-Xn7">
@@ -165,16 +165,48 @@
                         <viewLayoutGuide key="safeArea" id="WL9-sV-gSV"/>
                     </view>
                     <connections>
-                        <outlet property="previewView" destination="LHC-qw-cLp" id="KTz-LU-Oac"/>
+                        <outlet property="captureButton" destination="ZWB-2a-q3k" id="Zn3-FJ-GDW"/>
+                        <outlet property="flipCameraButton" destination="Rzp-47-Pup" id="q8K-7R-XNa"/>
+                        <outlet property="previewView" destination="LHC-qw-cLp" id="BJv-tx-flj"/>
                         <segue destination="g02-2n-xWj" kind="presentation" identifier="ToLoginScreen" id="YMc-6c-TYS"/>
                         <segue destination="yPB-KM-7nL" kind="presentation" identifier="UsersVC" id="W2u-iu-KVa"/>
                         <segue destination="Cov-4R-B2Q" kind="presentation" identifier="goLeft" modalTransitionStyle="crossDissolve" id="7U1-XP-0G3"/>
                         <segue destination="S2Y-7x-LxG" kind="presentation" identifier="goRight" modalTransitionStyle="crossDissolve" id="Bjb-zR-xL0"/>
+                        <segue destination="gjb-0f-qC5" kind="presentation" identifier="toPreview" id="IvQ-GP-2Q9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Agy-d9-ff5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="176.81159420289856" y="-887.77173913043487"/>
+        </scene>
+        <!--Preview View Controller-->
+        <scene sceneID="cPl-Zv-fye">
+            <objects>
+                <viewController id="gjb-0f-qC5" customClass="PreviewViewController" customModule="Token" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M0v-tY-QhY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4GO-Ej-EQQ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4GO-Ej-EQQ" firstAttribute="trailing" secondItem="yY1-6U-vaB" secondAttribute="trailing" id="In3-Rg-uyW"/>
+                            <constraint firstItem="4GO-Ej-EQQ" firstAttribute="leading" secondItem="yY1-6U-vaB" secondAttribute="leading" id="J4i-g1-ekG"/>
+                            <constraint firstItem="4GO-Ej-EQQ" firstAttribute="bottom" secondItem="yY1-6U-vaB" secondAttribute="bottom" id="c1I-Hy-Mhv"/>
+                            <constraint firstItem="4GO-Ej-EQQ" firstAttribute="top" secondItem="M0v-tY-QhY" secondAttribute="top" id="w7L-Sg-iP5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yY1-6U-vaB"/>
+                    </view>
+                    <connections>
+                        <outlet property="ImageEdit" destination="4GO-Ej-EQQ" id="Ela-Wu-K5H"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cI0-7A-MeG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="930.43478260869574" y="-11.413043478260871"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="qDV-Wf-4Vt">
@@ -327,7 +359,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VzM-4G-U6j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1345" y="-112"/>
+            <point key="canvasLocation" x="-738" y="-11"/>
         </scene>
     </scenes>
     <resources>
