--- a/Storyboards/MainApp.storyboard
+++ b/Storyboards/MainApp.storyboard
@@ -54,32 +54,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="barca_bunkers_view" translatesAutoresizingMaskIntoConstraints="NO" id="2bg-f0-UVr">
-                                <rect key="frame" x="0.0" y="64" width="414" height="251"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barca_bunkers_view" translatesAutoresizingMaskIntoConstraints="NO" id="2bg-f0-UVr">
+                                <rect key="frame" x="-334.66666666666669" y="64" width="1083.3333333333333" height="251"/>
                             </imageView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ib2-rq-XVk">
-                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Profile" id="hZd-vo-DjM"/>
-                                </items>
-                            </navigationBar>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pj" translatesAutoresizingMaskIntoConstraints="NO" id="Rel-dN-RhV">
-                                <rect key="frame" x="130" y="231" width="155" height="163"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pj" translatesAutoresizingMaskIntoConstraints="NO" id="Rel-dN-RhV">
+                                <rect key="frame" x="129.66666666666666" y="233.66666666666663" width="154.99999999999997" height="163"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2bg-f0-UVr" firstAttribute="top" secondItem="ado-SG-4nz" secondAttribute="top" id="2cG-xu-9FT"/>
+                            <constraint firstItem="Rel-dN-RhV" firstAttribute="centerY" secondItem="2bg-f0-UVr" secondAttribute="bottom" id="JkA-rx-3af"/>
+                            <constraint firstItem="ado-SG-4nz" firstAttribute="bottom" secondItem="2bg-f0-UVr" secondAttribute="bottom" constant="421" id="Xco-Bh-z6f"/>
+                            <constraint firstItem="2bg-f0-UVr" firstAttribute="centerX" secondItem="5x2-Pj-hgh" secondAttribute="centerX" id="acA-Do-n6A"/>
+                            <constraint firstItem="Rel-dN-RhV" firstAttribute="centerX" secondItem="5x2-Pj-hgh" secondAttribute="centerX" id="xvM-O7-Ou0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ado-SG-4nz"/>
                     </view>
-                    <connections>
-                        <segue destination="YuE-zn-TSa" kind="presentation" identifier="goLeft" modalTransitionStyle="crossDissolve" id="OPj-iJ-kmP"/>
-                    </connections>
+                    <navigationItem key="navigationItem" id="Ug5-E9-58N"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qig-ja-xIx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2262" y="-887"/>
+            <point key="canvasLocation" x="3012" y="-827"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yy8-pT-6Xh">
+            <objects>
+                <navigationController storyboardIdentifier="ProfileViewController" id="Igl-Yp-47l" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sbg-tC-Wqk">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="S2Y-7x-LxG" kind="relationship" relationship="rootViewController" id="AP3-7A-KDd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8AN-wD-NUN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2014" y="-827"/>
         </scene>
         <!--Token Camera View Controller-->
         <scene sceneID="AbO-bm-1pZ">
@@ -95,7 +107,6 @@
                         <segue destination="g02-2n-xWj" kind="presentation" identifier="ToLoginScreen" id="YMc-6c-TYS"/>
                         <segue destination="yPB-KM-7nL" kind="presentation" identifier="UsersVC" id="W2u-iu-KVa"/>
                         <segue destination="Cov-4R-B2Q" kind="presentation" identifier="goLeft" modalTransitionStyle="crossDissolve" id="7U1-XP-0G3"/>
-                        <segue destination="S2Y-7x-LxG" kind="presentation" identifier="goRight" modalTransitionStyle="crossDissolve" id="Bjb-zR-xL0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Agy-d9-ff5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -262,8 +273,5 @@
         <image name="pj" width="155" height="163"/>
         <image name="sendSnapButton" width="23" height="23"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="Wpb-0U-14Y"/>
-    </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
